<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Car Go</string>
    <string name="skip">Skip</string>
    <string name="get_fastest_service">Get fastest service</string>
    <string name="we_offer_fastest_service_in_any_area">We offer fastest service in your area</string>
    <string name="find_nearest_shop">Find nearest car rental services</string>
    <string name="you_can_get_your_favorite_car_in_just_one_click">choose best option!</string>
    <string name="next">Next</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_to_recover">Enter your email to recover</string>
    <string name="send">Send</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="otp">OTP</string>
    <string name="email_verification_process">Phone Verification</string>
    <string name="enter_code_here">Enter the otp sent to</string>
    <string name="confirm">Confirm</string>
    <string name="didn_t_received_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="choose_a_new_password">Choose a new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="done">Done</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_up_as">Sign Up As</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email address</string>
    <string name="settings">Settings</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & policy]]></string>
    <string name="invite_friends">Invite friends</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="my_ads">My Ads</string>
    <string name="help">Help</string>
    <string name="messages">Messages</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="company_name">Company name</string>
    <string name="cnic">CNIC</string>
    <string name="password_min_6_characters">Password (min : 6 characters)</string>
    <string name="email">Email</string>
    <string name="we_have_blocked_requests_from_this_device_due_to_unusual_activity">We have blocked all requests from this\ndevice due to unusual activity</string>
    <string name="try_again_later">Try Again Later</string>
    <string name="header_image">Header Image</string>
    <string name="bus">Bus</string>
    <string name="suv">SUV</string>
    <string name="sedan">Sedan</string>
    <string name="hatchback">HatchBack</string>
    <string name="most_popular">Most Popular</string>
    <string name="car_go">Car Go</string>
    <string name="all_vehicles">All Vehicles</string>
    <string name="no_internet_please_connect_to_ninternet_and_try_again">No Internet! Please connect to\ninternet and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="dummyprofile_gmail_com">dummyprofile@gmail.com</string>
    <string name="my_rental_cars">No Services</string>
    <string name="currently_there_are_no_cars_added">Currently there are no cars added.</string>
    <string name="new_car">+New Car</string>
    <string name="location">Location</string>
    <string name="create">Create</string>
    <string name="account_information">Account Information</string>
    <string name="your_current_sign_in_is_associated_with_a_user_account_do_you_want_to_switch_to_the_company_account">Your current sign-in is associated with a user account. Do you want to switch to the company account?</string>
    <string name="terms_detail">You\'re going to put your car up for rent. You and the rentee\'s transactions are not CarGo\'s responsibility. Proceed at your own risk.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="add_new_car">Add New Car</string>
    <string name="add_car_images">Add Car Images</string>
    <string name="select_model_year">Select Model Year</string>
    <string name="model_year">Model Year</string>
    <string name="car_transmission">Car Transmission</string>
    <string name="car_model">Car Model</string>
    <string-array name="car_make">
        <item>Audi</item>
        <item>BMW</item>
        <item>Changan</item>
        <item>Chery</item>
        <item>DFSK</item>
        <item>Daihatsu</item>
        <item>Daewoo</item>
        <item>FAW</item>
        <item>GMC</item>
        <item>Haval</item>
        <item tools:ignore="Typos">Higer</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Isuzu</item>
        <item>JW</item>
        <item>KIA</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Mercedes-Benz</item>
        <item>MG</item>
        <item>Mazda</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Proton</item>
        <item>Prince</item>
        <item>Rolls-Royce</item>
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>United</item>
        <item>Yutong</item>
    </string-array>
    <string name="engine_type">Engine Type</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="body_color">Body Color</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="car_type">Car Type</string>
    <string name="pickup_city">Pickup City</string>
    <string name="car_mileage">Car Mileage (km)</string>
    <string-array name="registration_city">
        <item>Lahore</item>
        <item>Faisalabad</item>
        <item>Multan</item>
        <item>Rawalpindi</item>
        <item>Islamabad</item>
        <item>Karachi</item>
        <item>Hyderabad</item>
        <item>Peshawar</item>
        <item>Quetta</item>
        <item>Other</item>
    </string-array>
    <string-array name="driver_availability">
        <item>Only with Driver</item>
        <item>Driver on Demand</item>
        <item>Without Driver</item>
    </string-array>
    <string name="car_rent_rs">Car Rent (Rs)</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="enter_here">Enter Here…</string>
    <string name="car_mileage_in_km_s">Car Mileage in km\'s</string>
    <string name="car_variant">Car Variant</string>
    <string name="insured">Insured</string>
    <string name="select_year">Select Year</string>
    <string name="_2024">2024</string>
    <string name="ok">OK</string>
    <string name="select_item">Select City</string>
    <string name="close">Close</string>
    <string name="abbottabad">Abbottabad</string>
    <string name="select_pickup_city">Select Pickup City</string>
    <string name="_5_photos">/8 photos</string>
    <string name="_0">0</string>
    <string name="rs">Rs.</string>
    <string name="_100000">100000</string>
    <string name="day">/day</string>
    <string name="lahore">Lahore</string>
    <string name="dummy">dummy</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="variant">Variant</string>
    <string name="model">Model</string>
    <string name="in_review">In Review</string>
    <string name="honda_city">Honda City 2007</string>
    <string name="update_on">Update On</string>
    <string name="mar_5_2024">Mar 5, 2024</string>
    <string name="owner">Owner:</string>
    <string name="contact_renter">Contact Renter</string>
    <string name="description">Description</string>
    <string name="_100">100%</string>
    <string name="no_messages_available_at_the_moment">No messages available at the moment.</string>
    <string name="initiate_conversation_with_the_renter_about_the_rental">Initiate conversation with the renter about the rental process.</string>
    <string name="start">Start</string>
    <string name="view_ad">View Ad</string>
    <string name="start_typing" tools:ignore="TypographyEllipsis">Type a message...</string>
    <string name="chat_note">Note!\nYou will be interacting with the renter directly at this point. Car Go is not responsible for any dealings between you and the renter. Proceed at your own risk.</string>
    <string name="s400l_2023">S400L 2023</string>
    <string name="edit">Edit</string>
    <string name="set_as_booked">Set as Booked</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="car_rental_services">Car rental services</string>
    <string name="enter_your_cnic">Enter your CNIC</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="our_application_will_also_help_you_to_find_nyour_car_from_any_location">Our application will also help you to locate\nyour car from any location.</string>
    <string name="find_your_car_nfrom_any_location">Find your car\nfrom any location</string>
    <string name="start_tracking">Start tracking</string>
    <string name="map_type">Map type</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="select_insurance_status">Select Insurance Status</string>
    <string name="yes">\u2022 Yes</string>
    <string name="no">\u2022 No</string>
    <string name="select_driver_availabilty">Select Driver Availability</string>
    <string name="only_with_driver">\u2022 Only with Driver</string>
    <string name="driver_on_demand">\u2022 Driver on Demand</string>
    <string name="without_driver">\u2022 Without Driver</string>
    <string name="faisalabad">\u2022 Faisalabad</string>
    <string name="other">\u2022 Other</string>
    <string name="multan">\u2022 Multan</string>
    <string name="rawalpindi">\u2022 Rawalpindi</string>
    <string name="islamabad">\u2022 Islamabad</string>
    <string name="karachi">\u2022 Karachi</string>
    <string name="hyderabad">\u2022 Hyderabad</string>
    <string name="peshawar">\u2022 Peshawar</string>
    <string name="quetta">\u2022 Quetta</string>
    <string name="select_registration_city">Select Registration City</string>
    <string name="u2022_lahore">• Lahore</string>
    <string name="select_your_choice">Select Your Choice</string>
    <string name="car_rent_from_low_to_high">\u25EF  Car Rent (From Low to High)</string>
    <string name="car_rent_from_high_to_low">\u25EF  Car Rent (From High to Low)</string>
    <string name="car_model_from_old_to_new">\u25EF  Car Model (From Old to New)</string>
    <string name="car_model_from_new_to_old">\u25EF  Car Model (From New to Old)</string>
    <string name="charges_may_apply">Charges may apply</string>
    <string name="charges_alert">Please note that standard call charges may apply when contacting support.</string>
    <string name="call_help_center">Call Help Center</string>
    <string name="show_hints">Show Hints</string>
    <string name="would_you_like_a_guided_tour_of_our_app">Would you like a guided tour of our app?</string>
    <string name="start_app_tour">Start App Tour</string>
</resources>