<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:text="@string/select_registration_city"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvUpdateRegistrationLHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/u2022_lahore"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationFSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/faisalabad"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationMultan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/multan"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationPindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/rawalpindi"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationIslamabad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/islamabad"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationKarachi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/karachi"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationHyderabad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/hyderabad"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/peshawar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationQuetta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/quetta"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUpdateRegistrationCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:padding="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/hint_color"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>