<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/white"
android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_insurance_status"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:letterSpacing=".02"
    android:textStyle="bold"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:fontFamily="@font/product_sans_regular"
    tools:ignore="RtlSymmetry" />

<TextView
    android:id="@+id/tvUpdateStatusYES"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/yes"
    android:paddingVertical="@dimen/_5sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:textColor="@color/black"
    android:textSize="14sp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:letterSpacing=".02"
    android:textStyle="bold"
    android:fontFamily="@font/product_sans_regular"/>

<TextView
    android:id="@+id/tvUpdateStatusNO"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/no"
    android:paddingVertical="@dimen/_5sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:textColor="@color/black"
    android:textSize="14sp"
    android:letterSpacing=".02"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="@dimen/_10sdp"
    android:textStyle="bold"
    android:fontFamily="@font/product_sans_regular"/>

<TextView
    android:id="@+id/tvCancelInsuranceUpdate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    android:textAllCaps="true"
    android:layout_gravity="end"
    android:padding="@dimen/_5sdp"
    android:textColor="@color/hint_color"
    android:letterSpacing=".02"
    android:textSize="14sp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:textStyle="bold"
    android:fontFamily="@font/product_sans_regular"/>



</LinearLayout>