<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:text="@string/select_driver_availabilty"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvOnlyDriverUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/only_with_driver"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOnDemandUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/driver_on_demand"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWithoutDriverUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/without_driver"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCancelDriverUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:padding="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/hint_color"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>