<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifMyAdWarning"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/ic_warning_gif"
        android:tint="@color/dummy_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/product_sans_regular"
        android:letterSpacing=".02"
        android:text="@string/charges_may_apply"
        android:textColor="@color/dummy_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:text="@string/charges_alert"
        android:textColor="@color/dummy_black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/btnCancelCharges"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/add_new_car_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dummy_black"
            android:letterSpacing=".02"
            android:fontFamily="@font/product_sans_regular"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCallHelpCenter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:backgroundTint="@color/app_theme_color"
        android:fontFamily="@font/product_sans_regular"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/call_help_center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10sdp"/>

</LinearLayout>